PLANET-7219 Apply new identity link styles to the author block and page
Otherwise we cannot tell where links are until we hover them. This commit also adds the external link icon when needed to the author page details, to be consistent with the author block.

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -315,6 +315,12 @@ table.spreadsheet-table.is-color-gp-green {
   }
 }
 
+// Author block/page links
+.author-block-info > div a,
+.author-details a {
+  @include shared-link-styles;
+}
+
 // Cookies box links
 .cookies-text,
 .cookies-settings-details {
