Apply new link styles to the 404 page
This is for consistency and better UX

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -330,6 +330,11 @@ table.spreadsheet-table.is-color-gp-green {
   }
 }
 
+// 404 page links
+.page-404-page .speech-bubble a {
+  @include shared-link-styles;
+}
+
 .cookies-settings-header h4 {
   font-family: var(--font-family-paragraph-secondary);
 }
