PLANET-6917 Refactor Counter block to use hydration
This is to stop using frontendRendered

--- a/assets/src/styles/blocks/Counter/CounterStyle.scss
+++ b/assets/src/styles/blocks/Counter/CounterStyle.scss
@@ -1,3 +1,6 @@
+@import "../../master-theme/assets/src/scss/base/colors";
+@import "../../master-theme/assets/src/scss/base/variables";
+
 .counter-block {
   _-- {
     font-family: var(--headings--font-family);
