Add template include for custom scripts
This will allow adding child theme custom scripts without
overriding the whole header template.

--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -50,4 +50,6 @@
             {% for style in custom_styles.css %}{{ style|raw }}{% endfor %}
         </style>
     {% endif %}
+
+    {% include 'custom_scripts.twig' ignore missing %}
 </head>
