Ref: https://jira.greenpeace.org/browse/PLANET-7225
Fix font family when the new identity feature is disabled

- Fix headings and links which previously were defined as secondaries, but now as the primary ones
- Also fix the body font family as the secondary font family

--- a/assets/src/scss/base/_css-variables.scss
+++ b/assets/src/scss/base/_css-variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --body--font-family: var(--font-family-primary);
-  --headings--font-family: var(--font-family-secondary);
+  --body--font-family: var(--font-family-secondary);
+  --headings--font-family: var(--font-family-primary);
   --headings--font-weight: bold;
   --body--background-color: #{$white};
   --body--color: #{$grey-80};
