--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -11,13 +11,25 @@
   padding-left: 10px;
 }
 
+#wpbody-content {
+  padding-bottom: 0;
+}
+
+#wpfooter {
+  display: none;
+}
+
+.archive-picker {
+  width: 100%;
+}
+
 .archive-picker-search {
   margin-top: 20px;
   display: flex;
 }
 
 .picker-list {
-  max-height: 75vh;
+  max-height: 80vh;
   overflow-y: scroll;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -27,6 +39,80 @@
 
 .image-picker {
   position: relative;
+}
+
+.picker-list li {
+  position: relative;
+}
+
+.item-disabled {
+  opacity: .2;
+}
+
+.picker-list li .components-spinner {
+  position: absolute;
+  top: 8px;
+  left: 0;
+}
+
+.picker-list.bulk-select li img {
+  opacity: 0.8;
+  transition: opacity 250ms ease;
+}
+
+.picker-list.bulk-select li img.picker-selected {
+  opacity: 1;
+}
+
+.archive-picker-toolbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 32px;
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+.archive-picker-title {
+  font-size: 24px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.nav-bulk-select {
+  display: flex;
+  align-items: center;
+}
+
+.nav-bulk-select.bulk-enabled {
+  width: 100%;
+  justify-content: space-between;
+}
+
+.nav-bulk-select button {
+  height: 36px;
+}
+
+.nav-bulk-select button:not(:last-child) {
+  margin-inline-end: 8px;
+}
+
+.bulk-select-checkbox {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: 2px;
+  top: 2px;
+  background-color: white;
+  border: 1px solid #979797;
+  cursor: pointer;
+}
+
+.bulk-select-checkbox.is-checked {
+  background: url("../../images/checkmark.svg"), white;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .image-picker li img {
@@ -44,34 +130,38 @@
   position: relative;
 }
 
-.image-picker li[data-wordpress-id]:after {
+.image-picker .added-to-library {
+  display: block;
+  position: absolute;
+  top: 2px;
+  background: white;
+  opacity: 90%;
+  height: 25px;
+  padding: 0 4px;
+  cursor: pointer;
+}
+
+.image-picker .added-to-library:before {
   content: "";
   display: block;
   background: url("../../images/added-to-library.svg");
   width: 25px;
   height: 25px;
   position: absolute;
-  /* 2px to account for the border width */
-  top: 2px;
+  top: 0;
   left: 2px;
 }
 
-.image-picker .added-to-library {
+.image-picker .added-to-library span {
   display: none;
 }
 
-.image-picker li[data-wordpress-id]:hover .added-to-library {
+.image-picker .added-to-library:hover span {
   display: block;
-  position: absolute;
-  top: 2px;
-  left: 27px;
-  background: white;
-  opacity: 90%;
-  height: 25px;
-  line-height: 25px;
-  padding: 0 4px;
+  margin-left: 25px;
   font-size: 10px;
   color: black;
+  line-height: 25px;
 }
 
 .image-picker.open-sidebar li img {
@@ -82,18 +172,27 @@
   opacity: 100%;
 }
 
+.archive-picker.open-sidebar .help {
+  display: none;
+}
+
+.picker-list li.is-selected img {
+  opacity: 100% !important;
+}
+
 .image-picker.open-sidebar li img.picker-selected {
   border-color: #1772a5;
   opacity: 100%;
 }
 
 .image-picker .help {
-  position: absolute;
+  position: fixed;
   bottom: 8px;
   right: 8px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  z-index: 1;
 }
 
 .image-picker .help span {
@@ -105,6 +204,7 @@
   cursor: pointer;
   width: 24px;
   height: 24px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .image-picker .help .tooltip {
@@ -168,8 +268,21 @@
   margin-bottom: 10px;
 }
 
-.picker-sidebar .info {
-  position: absolute;
+.picker-sidebar-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  min-height: 20px;
+  margin-bottom: 10px;
+}
+
+.picker-sidebar-header .info {
+  width: fit-content;
+}
+
+.picker-sidebar .error {
+  margin-top: 16px;
 }
 
 .picker-sidebar .sidebar-action {
@@ -181,17 +294,20 @@
 
 .archive-picker-loading {
   text-align: center;
-  margin-top: 30px;
 }
 
-.picker-sidebar .close-sidebar {
+.archive-picker-loading svg {
+  width: 24px;
+  height: 24px;
+}
+
+.picker-sidebar-header .close-sidebar {
   background: url("../../images/black-cross.svg");
   border: none;
   cursor: pointer;
   min-height: 16px;
   width: 15px;
   background-repeat: no-repeat;
-  align-self: flex-end;
 }
 
 .close-icon {
@@ -216,16 +332,15 @@
   border: 1px solid #979797;
   border-radius: 0;
   width: 100%;
-  margin: 0;
+  margin: 20px 0;
   box-sizing: border-box;
   overflow: hidden;
 }
 
 .multiple-search-form {
   display: flex;
-  margin-top: 8px;
-  margin-bottom: 8px;
   height: auto;
+  align-items: flex-start;
 }
 
 .multiple-search-item {
@@ -245,11 +360,21 @@
   cursor: pointer;
 }
 
+.multiple-search-wrapper-input {
+  background: url("../../images/search.svg");
+  background-size: 20px auto;
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-origin: content-box, padding-box;
+  padding-right: 8px;
+}
+
 .multiple-search-wrapper-input input {
-  width: 100%;
-  margin: 0;
+  position: relative;
+  width: calc(100% - 20px);
   height: 100%;
-  background: transparent;
+  margin: 0;
+
   border-radius: 0;
   font-size: 14px;
   outline: 0;
@@ -268,7 +393,7 @@
 }
 
 .multiple-search-nav > button {
-  height: 36px;
+  height: 36px !important;
 }
 
 .multiple-search-nav > button:not(:last-child) {
@@ -280,6 +405,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.multiple-search-form {
+  width: 100%;
+  height: auto;
 }
 
 .multiple-search-list {
@@ -297,11 +427,39 @@
   display: none;
 }
 
+.archive-picker-title {
+  line-height: 150%;
+}
+
+@media (min-width: 576px) {
+  .picker-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media (min-width: 768px) {
   #wpcontent {
     padding-top: 10px;
     padding-right: 20px;
     padding-left: 20px;
+  }
+
+  .archive-picker.open-sidebar {
+    width: calc(100% - var(--sidebar-width-large) + 8px);
+  }
+
+  .archive-picker.open-sidebar .help {
+    display: flex;
+    right: var(--sidebar-width-large);
+  }
+
+  .archive-picker.open-sidebar .multiple-search-form {
+    width: 100%;
+    margin-top: 16px;
+  }
+
+  .archive-picker.open-sidebar .nav-bulk-select {
+    order: 0;
   }
 
   .picker-sidebar {
@@ -313,7 +471,7 @@
   }
 
   .image-picker.open-sidebar {
-    width: calc(100% - var(--sidebar-width-tablet) - 52px);
+    width: 100%;
   }
 
   .image-picker.open-sidebar .picker-list {
@@ -328,26 +486,69 @@
     max-width: 330px;
   }
 
+  .archive-picker-title {
+    margin-right: 12px;
+  }
+
   .multiple-search {
     max-width: 400px;
+    margin: 0;
+  }
+
+  .multiple-search-form {
+    width: auto;
   }
 
   .multiple-search-wrapper-input {
-    min-width: 230px;
+    min-width: auto;
+    margin: 0;
   }
 
   .multiple-search-wrapper-input input {
-    height: 36px;
+    height: 34px;
     padding: 8px;
   }
 
   .multiple-search-nav {
     display: flex;
+    align-items: center;
     margin-left: 8px;
   }
 
   .multiple-search-list {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .nav-bulk-select.bulk-enabled {
+    justify-content: flex-end;
+  }
+
+  .nav-bulk-select.bulk-enabled .info {
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 782px) {
+  .btn-cancel-bulk-select {
+    padding: 0 !important;
+    background-color: transparent !important;
+    border: none !important;
+    display: flex !important;;
+    align-items: center;
+    color: #1D2327 !important;
+  }
+
+  .btn-cancel-bulk-select::before {
+    content: "";
+    height: 18px;
+    width: 18px;
+    display: block;
+    background-color: #1D2327;;
+    mask: url("../../images/chevron.svg");
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    margin-inline-end: 8px;
+    transform: rotate(180deg);
   }
 }
 
@@ -355,9 +556,35 @@
   .picker-sidebar {
     padding-top: 56px;
   }
+
+  .nav-bulk-select {
+    order: 1;
+    margin-left: auto;
+  }
+
+  .image-picker.open-sidebar .picker-list {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media (min-width: 1200px) {
+  .archive-picker.open-sidebar .multiple-search-form {
+    width: 100%;
+  }
+
+  .archive-picker.open-sidebar .multiple-search-form .multiple-search {
+    max-width: 100%;
+  }
+
+  .archive-picker.open-sidebar {
+    width: calc(100% - var(--sidebar-width-large) - 42px);
+  }
+
+  .archive-picker.open-sidebar .help {
+    display: flex;
+    right: calc(var(--sidebar-width-large) + 50px);
+  }
+
   .picker-sidebar {
     width: var(--sidebar-width-large);
   }
@@ -376,25 +603,28 @@
   .image-picker .help:hover .tooltip:after {
     right: 8px;
   }
-}
 
-@media (min-width: 1439px) {
-  .multiple-search-list {
-    display: grid;
+  .image-picker.open-sidebar .picker-list {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (min-width: 1440px) {
+  .archive-picker.open-sidebar .multiple-search-form {
+    width: fit-content;
+    margin-top: 0;
+  }
+
+  .archive-picker.open-sidebar .nav-bulk-select {
+    order: 1;
+  }
+
   .picker-list {
     grid-template-columns: repeat(5, 1fr);
   }
 
-  .image-picker.open-sidebar {
-    width: calc(100% - var(--sidebar-width-large) - 60px);
-  }
-
   .image-picker.open-sidebar .picker-list {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .multiple-search {
