--- a/assets/src/styles/blocks/Gallery/styles/GalleryCarousel.scss
+++ b/assets/src/styles/blocks/Gallery/styles/GalleryCarousel.scss
@@ -109,7 +109,7 @@
     p {
       color: $grey-60;
       font-size: $font-size-xxs;
-      font-family: var(--headings--font-family);
+      font-family: var(--image-figcaption--font-family, var(--headings--font-family));
       line-height: 1.4;
       margin-bottom: 0;
       display: -webkit-box;
