PLANET-7243 Fix new identity secondary buttons active styles
This is only applied when the new identity is enabled

--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -135,6 +135,7 @@
     &:active {
       background: $active-blue;
       border-color: $active-blue;
+      color: $white;
     }
 
     &:disabled,
