--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -67,6 +67,8 @@
   --button-secondary--visited--color: var(--p4-dark-green-800);
   --button-secondary--hover--background: var(--p4-dark-green-800);
   --button-secondary--hover--border-color: var(--p4-dark-green-800);
+  --button-secondary--active--background: var(--p4-dark-green-800);
+  --button-secondary--active--border-color: var(--p4-dark-green-800);
   --button-secondary--hover--color: var(--white);
   --table-footer-new--background: var(--beige-300);
   --table-header-grey--background: var(--grey-800);
