Split files for Split Two Columns block
This is in preparation for a bigger refactor to remove the deprecated frontendRendered function

--- a/assets/src/styles/blocks/SplitTwoColumns/SplitTwoColumnsEditorStyle.scss
+++ b/assets/src/styles/blocks/SplitTwoColumns/SplitTwoColumnsEditorStyle.scss
@@ -1,3 +1,5 @@
+@import "../../master-theme/assets/src/scss/base/colors";
+
 .splittwocolumns-block-issue-imgs,.splittwocolumns-block-tag_imgs {
   width: 250px;
   padding: 10px 10px;
