Split Articles block files
This is in preparation for a bigger refactor to use hydration

--- a/assets/src/styles/blocks/Articles/ArticlesStyle.scss
+++ b/assets/src/styles/blocks/Articles/ArticlesStyle.scss
@@ -1,3 +1,7 @@
+@import "../../master-theme/assets/src/scss/base/colors";
+@import "../../master-theme/assets/src/scss/base/mixins";
+@import "../../master-theme/assets/src/scss/base/variables";
+
 .article-list-item {
   display: flex;
   flex-direction: column;
